--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -69,6 +71,12 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
+  fonts:
+    - family: PlusJakartaSans
+      fonts:
+      - asset: assets/fonts/PlusJakartaSans-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/PlusJakartaSans-Regular.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
