--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ flutter_icons:
   android: true
   ios: true
   web: true
-  image_path: "assets/app_icon.png"
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
