--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   logger: ^2.5.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
