--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.14.2
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: true
@@ -73,6 +73,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icon/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
